# opencode-rust

./: .gitignore  package.json
.github/workflows/: opencode-rust-release.yml
migration/: 00_setup_rust_environment.md  01_cli_parsing.md  02_http_server.md  03_file_watcher.md  04_github_api.md  05_data_validation.md  06_integration_and_build.md  07_dynamic_sub_agents.md
opencode-rust/: Cargo.toml
opencode-rust/src/: cli.rs  config.rs  lib.rs  main.rs  watcher.rs
opencode-rust/src/agent/: core.rs  mod.rs  registry.rs  session.rs  spec.rs
opencode-rust/src/cli/: mod.rs
opencode-rust/src/cli/cmd/: acp.rs  agent.rs  attach.rs  auth.rs  debug.rs  export.rs  github.rs  mcp.rs  mod.rs  run.rs  serve.rs  stats.rs  tui.rs  upgrade.rs
opencode-rust/src/session/: mod.rs  prompt_builder.rs  prompts.rs  runtime.rs
opencode-rust/src/tool/: bash.rs  core.rs  echo.rs  fs.rs  mod.rs  web.rs
opencode-rust/src/util/: config.rs  error.rs  log.rs  mod.rs
opencode-rust/tests/: agents.rs  cli.rs  config.rs  session.rs  watcher.rs
third-parties/: README.md
