[package]
name = "opencode-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
validator = { version = "0.20.0", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
thiserror = "1.0.63"
async-trait = "0.1.81"
uuid = { version = "1.10.0", features = ["v4"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.13.0"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
